Fix scroll freezes on iOS (#3232)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,7 @@ body {
   line-height: 1.5;
   text-align: left;
   overflow: hidden;
+  overscroll-behavior: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
